added closure notification

--- a/room/index.html
+++ b/room/index.html
@@ -88,6 +88,11 @@
           <a href="/about" class="list-group-item">About</a>
         </ul>
       </div>
+      <div class="bmd-layout-container bmd-drawer-f-l">
+          <div class="navbar navbar-light bg-color" >
+            <p style="color:#fff; text-align:center;max-width:600px;display:block;margin:auto;">IMPORTANT NOTE: We've made the decision to shut down Occupancy App effective July 1st, 2021.  Reminder that the source code of the project can be found <a href="https://github.com/Occupancy-App" style="color:#dbdbdb;">here</a> if you have need of a self-hosted version.  Thank you for your support and hope the remainder of 2021 finds you well.</p>
+          </div>
+      </div>
       <main class="bmd-layout-content">
         <div id="link-copied" class="center invisible">
           <br>
